src/styles/main.css
:root {
  font-size: medium;

  /* color palette */
  --text-white: #ffffff;
  --book-cover-green: #1d442e;
  --book-cover-light-gold: rgb(255, 207, 64);
  --book-cover-medium-gold: rgb(191, 155, 48);
  --book-cover-dark-gold: rgb(166, 124, 0);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  font-family: "Yrsa", Arial;
  margin: 0;
  padding: 0;
  scrollbar-width: none;
  overflow-x: auto;
  /* overflow: hidden; */
  /* -ms-overflow-style: none; */
}

body {
  background: url("../assets/images/wood-table-background.png") no-repeat left center fixed;
  background-size: cover;
  padding: 1.8rem 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: nowrap;
}

#book {
  z-index: 2; /* so that the ribbons go behind the book when we hover over them */
}

.page {
  background-color: var(--book-cover-medium-gold);
}

#front-page {
  background: url("../assets/images/book-front-cover.svg") no-repeat center center;
  background-size: contain;
}

#back-page {
  background: url("../assets/images/book-back-cover.svg") no-repeat center center;
  background-size: contain;
}

.ribbons-container {
  height: 48rem;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 0rem;
  padding: 3rem 0;
}

#left-ribbons {
  /* we flip the whole ribbon container and then we will flip the text back, 
  this way we dont need new images for the mirrored ribbons. note: this probably wont
  be suitable for when we apply more complex styling to the text inside the span, 
  and so we may need to find another solution to flip the ribbon image */
  transform: scaleX(-1);
  .ribbon span {
    display: inline-block;
    transform: scaleX(-1);
  }
}

#right-ribbons {
}

.ribbon {
  border: none;
  font-family: inherit;
  /* cursor: pointer; */
  background: url("../assets/images/ribbon-green.svg") no-repeat center center;
  background-size: contain;
  width: 12rem;
  height: 6rem;
  color: var(--text-white);
  font-size: 1.5rem;
  letter-spacing: 0.1rem;
  text-align: center;
  padding: 0;
  transition: transform 0.15s ease;
  &:hover {
    transform: scale(1.05);
  }
}

.ribbon-map {
  background: url("../assets/images/ribbon-red.svg") no-repeat center center;
  background-size: contain;
}

.ribbon-album {
  background: url("../assets/images/ribbon-blue.svg") no-repeat center center;
  background-size: contain;
}

.ribbon-stats {
  background: url("../assets/images/ribbon-yellow.svg") no-repeat center center;
  background-size: contain;
}

